Versio 0.8: Kauppa, vartija, mediaominaisuudet